--- a/biodata.html
+++ b/biodata.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="eng">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Biodata</title>
 <style>
     body {
         font-family: Arial, sans-serif;
